--- a/MicrochartsSample.iOS/MicrochartsSample.iOS.csproj
+++ b/MicrochartsSample.iOS/MicrochartsSample.iOS.csproj
@@ -62,6 +62,7 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Implement\DeviceService.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
