文字編碼判斷

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /MicrochartsSample.Android/obj
 /MicrochartsSample.Android/MicrochartsSample.Android.csproj.user
 /MicrochartsSample.iOS/obj
+/MicrochartsSample.iOS/bin
